--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,8 @@
       }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=shopping_cart;User Id=root;Password=68146814;"
-    }
+  "ConnectionStrings": {
+    "localConnection": "Server=127.0.0.1;Port=3306;Database=shopping_cart;User Id=root;Password=68146814;",
+    "azureConnection": "Server=shoppingcartdbserver.mysql.database.azure.com;UserID=daniel_hsiao;Password=Today2023@@;Database=shopping_cart;"
+  }
 }
